# MPRPC

./: CMakeLists.txt  README.md
example/: user.proto
example/callee/: userservice.cc
example/caller/: calluserservice.cc
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  rpcheader.proto  rpcprovider.cc  zookeeperutil.cc
src/include/: lockqueue.h  logger.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  rpcprovider.h  zookeeperutil.h
test/protobuf/: a.out  main.cc  test.pb.cc  test.pb.h  test.proto
